# frontend_backend_conec_fastapi

./: Procfile  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
